made successful ajax req to get weather data. just need to extract and add location and weather info for the app to be mostly complete.
note: still need to add icons that appear based on weather conditions

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Richard Shipe's Portfolio Page</title>
+	<title>Weather App</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
@@ -10,26 +10,19 @@
 	<script src="https://use.fontawesome.com/13ff5fb67d.js"></script>
 </head>
 <body>
-	<div class="container">
+	<div class="wrapper">
 		<div class="title">
-			<h2>Weather in your area</h2>
-			<p>by Richard Shipe</p>
+			<h2>Weather in Location<h2>
 		</div>
-		<div class="temp_location_container">
-			<div class="temperature">
-				78' F
+		<div class="flex_row">
+			<div class="temp col flex_center">
+				<h1 class="temperature">78'F</h1>
 			</div>
-			<div class="icon_container">
-				<i class="fa fa-sun-o fa-3x" aria-hidden="true"></i>
+			<div class="icon_area col flex_center">
+				<h1>: )</h1>
 			</div>
-		</div>
-		<div class="button_container">
-			<button>Celsius</button>
-			<button>Map</button>
 		</div>
 	</div>
-
-
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script async src="script.js"></script>
