--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="wrapper">
 		<div class="title">
-			<h2>Weather in Location<h2>
+			<h2>Weather in <span class="location">Location<span><h2>
 		</div>
 		<div class="flex_row">
 			<div class="temp col flex_center">
