--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
-	<link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
-
 	<link rel="stylesheet" href="styles.css">
 	<script src="https://use.fontawesome.com/13ff5fb67d.js"></script>
 </head>
 <body>
 	<div class="wrapper">
 		<div class="title">
-			<h2>Weather in <span class="location">Location<span><h2>
+			<h2 class="location">City Name<h2>
 		</div>
+		<div class=condition>Weather condition</div>
 		<div class="flex_row">
 			<div class="temp col flex_center">
-				<h1 class="temperature">78'F</h1>
+				<p class="temperature">78</p>
 			</div>
 			<div class="icon_area col flex_center">
 				<h1>: )</h1>
 			</div>
 		</div>
+		<div class="change_unit"><button>Celsius</button></div>
 	</div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
